--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,6 @@
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
-
 
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <!--Let browser know website is optimized for mobile-->
@@ -28,20 +25,18 @@
 </head>
 <body id="home" class="scrollspy">
 <!-- Compiled and minified JavaScript -->
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
-<script>
-    $(document).ready(function () {
-        $('.sidenav').sidenav();
-        // Init Slider
+<!--<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>-->
 
-        /* $('.slider').slider({
+<script>
+    /* $(document).ready(function () {
+         $('.sidenav').sidenav();
+         $('.slider').slider({
              indicators: false,
-             height: 500,
+             height: 1000,
              transition: 500,
              interval: 6000
-         });*/
-    });
+         });
+     });*/
 </script>
 <div id="root"></div>
 </body>
